--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   # Recortar imagenes
   crop_your_image: ^0.7.5
 
+  # Integración de anuncios
   google_mobile_ads: ^5.1.0
 
 dev_dependencies:
